--- a/assets/css/site color scheme.css
+++ b/assets/css/site color scheme.css
@@ -33,5 +33,4 @@ https://coolors.co/326273-4e3e51-db504a-201e1e-5f5e58-8d897c-b4b3a7-dad7d2-f0efe
     }
 
 /*
-https://coolors.co/d14c47-7C9C8C-35463d-201e1e-b4b3a7-8d897c-827f73-76746a-66645d-4a4945
-*/
+https://coolors.co/d14c47-201e1e-587465-35463d-b4b3a7-8d897c-827f73-76746a-66645d-4a4945*/
